--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ext-curl": "*"
     },
     "require-dev" : {
+        "phpunit/phpunit": "4.8.18"
     },
     "autoload": {
         "psr-4": {
