--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
         "email": "tech@giftery.ru"
     },
     "require": {
-        "php": ">=5.4.0",
-        "ext-curl": "*"
+        "php": ">=5.6",
+        "ext-curl": "*",
+        "instasent/sms-counter-php": "^0.4"
     },
     "require-dev" : {
         "phpunit/phpunit": "4.8.18"
